# info-h502-project

./: CMakeLists.txt  README.md  main.cpp  object.h  project.cpp  scene8.mtl  xhl.h
objectFolder/grass/: grass.fbx
objectFolder/window/: window.fbx
shaderFolder/: asteroid.fs  asteroid.vs  basic.fs  basic.vs  basic_sun.fs  bump.fs  bump.vs  exploding.fs  exploding.gs  exploding.vs  geo.fs  geo.gs  geo.vs  grass.fs  reflect.fs  reflect.vs  refract.fs  sky.fs  sky.vs  translucid.fs  translucid.vs
src/: ImportData.h  Importer.h  Shader.h  Texture.h  camera.h  glInit.h  glad.c  model.h
